--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ kotlin.native.binary.memoryModel=experimental
 kotlin.version=1.8.0
 agp.version=7.1.3
 compose.version=1.4.0-alpha01-dev954
+mokoResources.version=0.20.1
