--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ kotlin.native.binary.memoryModel=experimental
 kotlin.version=1.8.0
 agp.version=7.1.3
 compose.version=1.4.0-alpha01-dev954
+kotlinSerialization.version = 1.8.0
 mokoNetwork.version = 0.20.1
