--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ kotlin.native.binary.memoryModel=experimental
 kotlin.version=1.8.0
 agp.version=7.1.3
 compose.version=1.4.0-alpha01-dev954
-mokoMvvm.version = 0.15.0
+mvvm.version = 0.15.0
+network.version = 0.20.1
 kotlinSerialization.version = 1.8.0
-mokoNetwork.version = 0.20.1
+ktor.version = 2.2.4
